[package]
name = "sha1"
version = "0.1.0"
authors = ["Jason Dreyzehner <jason@dreyzehner.com>"]
description = "Sha1 for Libauth"
license = "MIT"
repository = "https://github.com/bitauth/libauth/"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayref = '0.3.4'
sha-1 = '0.7.0'
wasm-bindgen = '0.2.11'

[profile.release]
panic = 'abort'
debug = false
lto = true
opt-level = 'z'
